# sentinel_pii

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  integration.yml
dashboard/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
dashboard/__tests__/: adminActions.test.ts  adminAuth.jwks_errors.test.ts  adminAuth.test.ts  audit_api.test.ts  audit_csv_api.test.ts  auth.test.ts  e2e_db.e2e.ts  ensureAdminOr401.test.ts  jwks.test.ts  redis_limiter.test.ts  validation.test.ts
dashboard/lib/: adminActions.ts  adminAuth.ts  auth.ts  jwks.ts  rate_limiter.ts  redis_limiter.ts  validation.ts
dashboard/pages/: index.tsx
dashboard/pages/admin/: audit.tsx  keys.tsx
dashboard/pages/api/: events.ts  stats.ts
dashboard/pages/api/admin/: audit.csv.ts  audit.ts  keys.ts
dashboard/scripts/: migrate.js  seed_api_key.js
dashboard/sql/: add_audit_logs.sql  add_ingest_keys.sql  schema.sql
docs/: intune.md  jamf.md  telemetry.md
src/: context.rs  lib.rs  main.rs  scanner.rs  telemetry.rs
tests/: telemetry_integration.rs  telemetry_prune.rs
