[package]
name = "sentinel_pii"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "2"
aho-corasick = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
ctrlc = "3"
anyhow = "1"
once_cell = "1.21"
notify-rust = "4"

[dev-dependencies]
# simple unit test tools
